# Video-Annotation-Tool

./: .gitignore  Annotator.py  README.md  Validate_Annotation.py  VideoAnnotator.py  pyproject.toml  requirements.txt  utils.py
utils/: Annotator.py  utils.py
