[project]
name = "video-annotation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pynput>=1.8.1",
    "screeninfo>=0.8.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
